# metemengine

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
examples/basic_game/: CMakeLists.txt  camera.c  camera.h  game.c  player.c  player.h  scene1.c  scene1.h
include/core/: collision_box2D.h  engine.h  entity.h  renderer.h  scene.h
resources/: test.json  test3.json
src/: CMakeLists.txt
src/core/: collision_box2D.c  engine.c  engine.h  engine_types.h  entity.c  game_manager.c  game_manager.h  renderer.c  renderer.h  scene.c
src/scene/2d/: camera2d.c  camera2d.h  entity.c  entity.h  scene.c  scene.h  tile_map.c  tile_map.h
src/scene/2d/physics/: collision_box2D.c  collision_box2d.c  collision_box2d.h
src/ui/: profiler.c  profiler.h
